# libdeskentry

./: CMakeLists.txt  LICENSE  README.md
include/: deskentry.h
src/: deskentry.cpp
tests/: main.cpp
